Ass-1/getting_started/test_files/syntax_errors/ClassMissingClosingBracket.cpm
class Element {
  //@error - syntax (class missing closing bracket)

class Element2 {
}
main() : int {
  print(no_method(10))
  return 0
}